Updated the YAML files to add some structure
