# _umg_import/generator/src/main/java/io/apicurio/umg/models/concept/EntityId.java
@@ -1,7 +1,7 @@
 package io.apicurio.umg.models.concept;
 
 import io.apicurio.umg.beans.Entity;
-import io.apicurio.umg.beans.Specification;
+import io.apicurio.umg.beans.SpecificationVersion;
 import lombok.Builder;
 import lombok.Data;
 
@@ -9,13 +9,11 @@ import lombok.Data;
 @Data
 public class EntityId {
 
-    private String specificationId;
-    private String specificationVersion;
+    private SpecificationVersionId specVersionId;
     private String entityName;
 
-    public static EntityId create(Specification spec, Entity entity) {
-        return EntityId.builder().specificationId(spec.getSpecification())
-                .specificationVersion(spec.getVersion())
+    public static EntityId create(SpecificationVersion specVersion, Entity entity) {
+        return EntityId.builder().specVersionId(SpecificationVersionId.create(specVersion))
                 .entityName(entity.getName())
                 .build();
     }
