# _umg_import/generator/src/main/java/io/apicurio/umg/models/concept/EntityModel.java
@@ -5,7 +5,7 @@ import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
 
-import io.apicurio.umg.beans.Specification;
+import io.apicurio.umg.beans.SpecificationVersion;
 import lombok.Builder;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
@@ -16,7 +16,7 @@ import lombok.EqualsAndHashCode.Include;
 @EqualsAndHashCode(onlyExplicitlyIncluded = true)
 public class EntityModel {
 
-    private Specification spec;
+    private SpecificationVersion specVersion;
     @Include
     private NamespaceModel namespace;
     @Include
