# _umg_import/generator/src/main/java/io/apicurio/umg/models/concept/TraitId.java
@@ -1,6 +1,6 @@
 package io.apicurio.umg.models.concept;
 
-import io.apicurio.umg.beans.Specification;
+import io.apicurio.umg.beans.SpecificationVersion;
 import io.apicurio.umg.beans.Trait;
 import lombok.Builder;
 import lombok.Data;
@@ -9,13 +9,11 @@ import lombok.Data;
 @Data
 public class TraitId {
 
-    private String specificationId;
-    private String specificationVersion;
+    private SpecificationVersionId specVersionId;
     private String traitName;
 
-    public static TraitId create(Specification spec, Trait trait) {
-        return TraitId.builder().specificationId(spec.getSpecification())
-                .specificationVersion(spec.getVersion())
+    public static TraitId create(SpecificationVersion specVersion, Trait trait) {
+        return TraitId.builder().specVersionId(SpecificationVersionId.create(specVersion))
                 .traitName(trait.getName())
                 .build();
     }
