# _umg_import/generator/src/main/java/io/apicurio/umg/pipe/concept/CreatePropertyModelsStage.java
@@ -12,10 +12,10 @@ public class CreatePropertyModelsStage extends AbstractStage {
     @Override
     protected void doProcess() {
         Logger.info("-- Creating Property Models --");
-        getState().getSpecIndex().getSpecifications().forEach(spec -> {
+        getState().getSpecIndex().getAllSpecificationVersions().forEach(specVersion -> {
             // Create property models for traits
-            spec.getTraits().forEach(trait -> {
-                String fqTraitName = spec.getNamespace() + "." + trait.getName();
+            specVersion.getTraits().forEach(trait -> {
+                String fqTraitName = specVersion.getNamespace() + "." + trait.getName();
                 TraitModel traitModel = getState().getConceptIndex().lookupTrait(fqTraitName);
                 trait.getProperties().forEach(property -> {
                     PropertyModel propertyModel = PropertyModel.builder().name(property.getName()).type(PropertyType.create(property.getType())).build();
@@ -25,8 +25,8 @@ public class CreatePropertyModelsStage extends AbstractStage {
             });
 
             // Create property models for entities
-            spec.getEntities().forEach(entity -> {
-                String fqEntityName = spec.getNamespace() + "." + entity.getName();
+            specVersion.getEntities().forEach(entity -> {
+                String fqEntityName = specVersion.getNamespace() + "." + entity.getName();
                 EntityModel entityModel = getState().getConceptIndex().lookupEntity(fqEntityName);
                 entity.getProperties().forEach(property -> {
                     PropertyModel propertyModel = PropertyModel.builder().name(property.getName()).type(PropertyType.create(property.getType())).build();
