# _umg_import/generator/src/main/java/io/apicurio/umg/pipe/concept/CreateTraitModelsStage.java
@@ -11,13 +11,13 @@ public class CreateTraitModelsStage extends AbstractStage {
     @Override
     protected void doProcess() {
         Logger.info("-- Creating Trait Models --");
-        getState().getSpecifications().forEach(spec -> {
-            spec.getTraits().forEach(trait -> {
-                NamespaceModel nsModel = getState().getConceptIndex().lookupNamespace(spec.getNamespace());
+        getState().getSpecIndex().getAllSpecificationVersions().forEach(specVersion -> {
+            specVersion.getTraits().forEach(trait -> {
+                NamespaceModel nsModel = getState().getConceptIndex().lookupNamespace(specVersion.getNamespace());
                 TraitModel traitModel = TraitModel.builder()
                         .namespace(nsModel)
                         .name(trait.getName())
-                        .spec(spec)
+                        .specVersion(specVersion)
                         .transparent(Util.nullableBoolean(trait.getTransparent()))
                         .leaf(true)
                         .build();
